# openclaw_livekit_agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  dispatch-rule.json  docker-compose.yml  inbound-trunk.json  livekit.yaml  outbound-trunk.json  participant.json  redis.conf
livekit-agent/: Dockerfile  pyproject.toml  requirements.txt
livekit-agent/my_agent/: config.py  http_api.py  main.py  plugin_stt.py  plugin_tts.py  plugin_tts_transforms.py  sentence_splitter.py  session.py
livekit-agent/my_agent/utils/: audio_diag.py  logger.py
livekit-agent/stt_service/: Dockerfile  __init__.py  __main__.py  audio.py  config.py  requirements.txt  sber_stt.py  server.py  token_manager.py
livekit-agent/stt_service/proto/: recognition.proto  recognition_pb2.py  recognition_pb2_grpc.py
livekit-agent/tests/: conftest.py  test_confirmation_player.py  test_http_api.py  test_plugin_stt_dispatch.py  test_sentence_splitter.py  test_session_on_error.py  test_session_silence.py  test_stt_service_ws.py  test_tts_remote.py  test_tts_transforms.py
livekit-agent/tts_service/: Dockerfile  __init__.py  __main__.py  config.py  requirements.txt  server.py  translit.py  tts_engine.py
