[project]
name = "livekit-agent"
version = "0.2.0"
description = "LiveKit Agent with Silero TTS + Sber STT"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents~=1.5.12",
    "livekit-plugins-openai~=1.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "loguru>=0.7.0",
    "requests>=2.31",
    "number2text>=0.0.1",
    "tqdm>=4.66",
    "omegaconf>=2.3",
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]
[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["livekit-agent"]

[tool.ruff.lint]
ignore = ["F401"]
per-file-ignores = {"stt_service/proto/*" = ["E402", "F401"]}

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
